--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -23,12 +23,31 @@
 		height: 550px;
 		padding-top: 100px;
 	}
+	@include nmd {
+		height: 418px;
+	}
+	@include nsm {
+		height: auto;
+		background: none;
+		padding-top: 0;
+	}
+	&__img-mobile {
+		display: none;
+		@include nsm {
+			display: block;
+			width: 100%;
+		}
+
+	}
 	&__text-wrap {
 		background: rgba(10, 121, 145, 0.7);
 		padding: 67px 104px;
 		max-width: 680px;
 		@include nlg {
 			padding: 47px 74px;
+		}
+		@include nmd {
+			display: none;
 		}
 	}
 	&__title {
@@ -59,6 +78,9 @@
 		align-items: flex-start;
 		@include nlg {
 			top: 3%;
+		}
+		@include nmd {
+			display: none;
 		}
 	}
 	&__social-link {
@@ -120,12 +142,26 @@
 	padding: 11rem 0 7rem;
 	background: $pryme-alt;
 	height: auto;
+	@include nmd {
+		padding: 15rem 0 3rem;
+	}
+	@include nsm {
+		padding: 15rem 0 3rem;
+		z-index: 0;
+	}
 	&__title {
 		font-size: 2.5rem;
 		font-weight: 700;
 		font-family: $font-alt;
 		color: $colorw;
 		margin-bottom: 2rem;
+		@include nmd {
+			font-size: 2rem;
+		}
+		@include nsm {
+			font-size: 1.2rem;
+			margin-bottom: 1rem;
+		}
 	}
 	&__text {
 		color: #ffffff;
@@ -134,6 +170,11 @@
 		max-width: 30rem;
 		@media (min-width: 2000px) { 
 			max-width: 50rem;
+		}
+		@include nsm {
+			font-size: 0.875rem;
+			z-index: 2;
+			line-height: 190%;
 		}
 	}
 	&__img {
@@ -153,6 +194,20 @@
 			bottom: -1.75rem;
 			right: -15%;
 		}
+		@include nmd {
+			width: 70%;
+			bottom: 2rem;
+			right: -35%;
+		}
+		@include nsm {
+			z-index: -1;
+			width: 100%;
+			bottom: -1.5rem;
+			right: -30%;
+			opacity: 0.6;
+			display: none;
+		}
+		
 	}
 	&__row {
 		display: grid;
@@ -160,6 +215,17 @@
 		grid-column-gap: 20px;
 		margin-bottom: 7rem;
 		margin-top: -17.5rem;
+		@include nmd {
+			grid-template-columns: 1fr 1fr;
+			margin-bottom: 4rem;
+			grid-gap: 20px;
+		}
+		@include nsm {
+			grid-template-columns: 1fr 1fr;
+			margin-bottom: 2.5rem;
+			grid-gap: 10px;
+			margin-top: -18.5rem;
+		}
 	}
 	&__box {
 		background: $colorw;
@@ -172,6 +238,9 @@
 		@include nlg {
 			padding: 1.2rem 1rem;
 		}
+		@include nsm{
+			padding: 0.5rem;
+		}
 		&:hover {
 			transform: scale(1.03);
 			transition: 0.3s;
@@ -182,12 +251,20 @@
 		font-weight: bold;
 		color: $text-color;
 		text-align: center;
+		@include nsm{
+			font-size: 0.8rem;
+			line-height: 120%;
+		}
 	}
 	&__link {
 		color: $accent-fresh;
 		font-size: 1rem;
 		display: flex;
 		align-items: center;
+		@include nsm{
+			font-size: 0.7rem;
+			line-height: 120%;
+		}
 		&:hover {
 			text-decoration: underline;
 		}
@@ -203,6 +280,9 @@
 	}
 	&__icon {
 		margin: 1rem 0 1.5rem;
+		@include nsm{
+			margin: 0.2rem 0;
+		}
 	}
 }
 
@@ -210,18 +290,38 @@
 	background: linear-gradient(to bottom, #F0F8F7 70%, #0A7990 30%);
 	height:auto;
 	padding: 7.5rem 0 6rem;
+	@include nmd {
+		background: linear-gradient(to bottom, #F0F8F7 80%, #0A7990 20%);
+		padding: 3rem 0;
+	}
+	@include nmd {
+		background: linear-gradient(to bottom, #F0F8F7 80%, #0A7990 20%);
+		padding: 2rem 0;
+	}
 	&__title {
 		font-size: 2.5rem;
 		font-weight: 700;
 		font-family: $font-alt;
 		color: $pryme-alt;
 		margin-bottom: 3.2rem;
+		@include nmd {
+			font-size: 2rem;
+		}
+		@include nsm{
+			font-size: 1.2rem;
+			margin-bottom: 2rem;
+		}
 	}
 	&__row {
 		display: grid;
 		grid-template-columns: repeat(3, 1fr);
 		grid-auto-rows: minmax(197px, auto);
 		grid-gap: 20px;
+		@include nmd {
+			grid-template-columns: repeat(2, 1fr);
+			grid-auto-rows: minmax(114px, auto);
+			grid-gap: 1rem;
+		}
 	}
 	&__box {
 		background: $colorw;
@@ -232,6 +332,12 @@
 		justify-content: space-around;
 		box-shadow: 3px 3px 30px rgba(0, 0, 0, 0.25);
 		transition: 0.3s;
+		@include nmd {
+			padding: 1.2rem 2rem;
+		}
+		@include nsm {
+			padding: 0.4rem;
+		}
 		&:hover {
 			transform: scale(1.03);
 			transition: 0.3s;
@@ -241,30 +347,60 @@
 		font-size: 1.425rem;
 		font-weight: bold;
 		color: $text-color;
-		
+		@include nmd {
+			font-size: 1rem;
+		}
+		@include nsm {
+			font-size: 0.8rem;
+			line-height: 120%;
+		}
 	}
 	&__link {
 		color: $accent-fresh;
 		font-size: 1.125rem;
 		display: flex;
 		align-items: center;
+		@include nmd {
+			font-size: 0.8rem;
+		}
+		@include nsm {
+			font-size: 0.7rem;
+			line-height: 120%;
+		}
 	}
 }
 
 .geography {
 	padding: 3.2rem 0 5rem;
 	background: $colorw;
+	@include nmd {
+		padding: 3rem 0 3rem;
+	}
+	@include nsm {
+		background: url('../img/home/mobile/map_bg.png') center top/cover no-repeat;
+	}
 	&__title {
 		font-size: 2.5rem;
 		font-weight: 700;
 		font-family: $font-alt;
 		color: $pryme-alt;
 		margin-bottom: 2.5rem;
+		@include nmd {
+			font-size: 2rem;
+		}
+		@include nsm {
+			font-size: 1.2rem;
+		}
 	}
 	&__sub-title {
 		font-size: 1.125rem;
 		font-weight: 800;
 		color: $accent-fresh;
+		margin-bottom: 0.6rem;
+		@include nsm {
+			font-size: 1rem;
+			margin-bottom: 0.4rem;
+		}
 	}
 	&__row {
 		display: flex;
@@ -273,6 +409,9 @@
 		padding: 0 6rem;
 		@include nlg {
 			padding: 0;
+		}
+		@include nsm {
+			flex-direction: column;
 		}
 	}
 	&__box {
@@ -285,6 +424,13 @@
 		@include nlg {
 			margin-right: 0;
 		}
+		@include nmd {
+			margin-right: 1rem;
+		}
+		@include nmd {
+			margin-right: 0;
+			margin-bottom: 2rem;
+		}
 	}
 	&__list-wrap {
 		display: flex;
@@ -294,6 +440,9 @@
 	&__list {
 		padding-top: 0.6rem;
 		margin-right: 1.25rem;
+		@include nmd {
+			margin-right: 1rem;
+		}
 	}
 	&__link {
 		font-size: 0.75rem;
@@ -320,6 +469,13 @@
 		@include nlg {
 			padding: 0;
 			margin: 4.5rem 0 0;
+		}
+		@include nmd {
+			width: 100%;
+			margin: 2.5rem 0 0;
+		}
+		@include nsm {
+			display: none;
 		}
 	}
 }
