--- a/css/style.css
+++ b/css/style.css
@@ -230,6 +230,31 @@ p {
   }
 }
 
+@media all and (max-width: 1023px) {
+  .welcome {
+    height: 418px;
+  }
+}
+
+@media all and (max-width: 767px) {
+  .welcome {
+    height: auto;
+    background: none;
+    padding-top: 0;
+  }
+}
+
+.welcome__img-mobile {
+  display: none;
+}
+
+@media all and (max-width: 767px) {
+  .welcome__img-mobile {
+    display: block;
+    width: 100%;
+  }
+}
+
 .welcome__text-wrap {
   background: rgba(10, 121, 145, 0.7);
   padding: 67px 104px;
@@ -239,6 +264,12 @@ p {
 @media all and (max-width: 1240px) {
   .welcome__text-wrap {
     padding: 47px 74px;
+  }
+}
+
+@media all and (max-width: 1023px) {
+  .welcome__text-wrap {
+    display: none;
   }
 }
 
@@ -283,6 +314,12 @@ p {
 @media all and (max-width: 1240px) {
   .welcome__socials {
     top: 3%;
+  }
+}
+
+@media all and (max-width: 1023px) {
+  .welcome__socials {
+    display: none;
   }
 }
 
@@ -358,12 +395,38 @@ p {
   height: auto;
 }
 
+@media all and (max-width: 1023px) {
+  .about-us {
+    padding: 15rem 0 3rem;
+  }
+}
+
+@media all and (max-width: 767px) {
+  .about-us {
+    padding: 15rem 0 3rem;
+    z-index: 0;
+  }
+}
+
 .about-us__title {
   font-size: 2.5rem;
   font-weight: 700;
   font-family: "Montserrat", sans-serif;
   color: #F0F8F7;
   margin-bottom: 2rem;
+}
+
+@media all and (max-width: 1023px) {
+  .about-us__title {
+    font-size: 2rem;
+  }
+}
+
+@media all and (max-width: 767px) {
+  .about-us__title {
+    font-size: 1.2rem;
+    margin-bottom: 1rem;
+  }
 }
 
 .about-us__text {
@@ -376,6 +439,14 @@ p {
 @media (min-width: 2000px) {
   .about-us__text {
     max-width: 50rem;
+  }
+}
+
+@media all and (max-width: 767px) {
+  .about-us__text {
+    font-size: 0.875rem;
+    z-index: 2;
+    line-height: 190%;
   }
 }
 
@@ -407,6 +478,25 @@ p {
   }
 }
 
+@media all and (max-width: 1023px) {
+  .about-us__img {
+    width: 70%;
+    bottom: 2rem;
+    right: -35%;
+  }
+}
+
+@media all and (max-width: 767px) {
+  .about-us__img {
+    z-index: -1;
+    width: 100%;
+    bottom: -1.5rem;
+    right: -30%;
+    opacity: 0.6;
+    display: none;
+  }
+}
+
 .about-us__row {
   display: -ms-grid;
   display: grid;
@@ -415,6 +505,25 @@ p {
   grid-column-gap: 20px;
   margin-bottom: 7rem;
   margin-top: -17.5rem;
+}
+
+@media all and (max-width: 1023px) {
+  .about-us__row {
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    margin-bottom: 4rem;
+    grid-gap: 20px;
+  }
+}
+
+@media all and (max-width: 767px) {
+  .about-us__row {
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    margin-bottom: 2.5rem;
+    grid-gap: 10px;
+    margin-top: -18.5rem;
+  }
 }
 
 .about-us__box {
@@ -443,6 +552,12 @@ p {
   }
 }
 
+@media all and (max-width: 767px) {
+  .about-us__box {
+    padding: 0.5rem;
+  }
+}
+
 .about-us__box:hover {
   -webkit-transform: scale(1.03);
           transform: scale(1.03);
@@ -457,6 +572,13 @@ p {
   text-align: center;
 }
 
+@media all and (max-width: 767px) {
+  .about-us__sub-title {
+    font-size: 0.8rem;
+    line-height: 120%;
+  }
+}
+
 .about-us__link {
   color: #F96B30;
   font-size: 1rem;
@@ -466,6 +588,13 @@ p {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+@media all and (max-width: 767px) {
+  .about-us__link {
+    font-size: 0.7rem;
+    line-height: 120%;
+  }
 }
 
 .about-us__link:hover {
@@ -486,11 +615,33 @@ p {
   margin: 1rem 0 1.5rem;
 }
 
+@media all and (max-width: 767px) {
+  .about-us__icon {
+    margin: 0.2rem 0;
+  }
+}
+
 .our-service {
   background: -webkit-gradient(linear, left top, left bottom, color-stop(70%, #F0F8F7), color-stop(30%, #0A7990));
   background: linear-gradient(to bottom, #F0F8F7 70%, #0A7990 30%);
   height: auto;
   padding: 7.5rem 0 6rem;
+}
+
+@media all and (max-width: 1023px) {
+  .our-service {
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(80%, #F0F8F7), color-stop(20%, #0A7990));
+    background: linear-gradient(to bottom, #F0F8F7 80%, #0A7990 20%);
+    padding: 3rem 0;
+  }
+}
+
+@media all and (max-width: 1023px) {
+  .our-service {
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(80%, #F0F8F7), color-stop(20%, #0A7990));
+    background: linear-gradient(to bottom, #F0F8F7 80%, #0A7990 20%);
+    padding: 2rem 0;
+  }
 }
 
 .our-service__title {
@@ -501,6 +652,19 @@ p {
   margin-bottom: 3.2rem;
 }
 
+@media all and (max-width: 1023px) {
+  .our-service__title {
+    font-size: 2rem;
+  }
+}
+
+@media all and (max-width: 767px) {
+  .our-service__title {
+    font-size: 1.2rem;
+    margin-bottom: 2rem;
+  }
+}
+
 .our-service__row {
   display: -ms-grid;
   display: grid;
@@ -508,6 +672,15 @@ p {
       grid-template-columns: repeat(3, 1fr);
   grid-auto-rows: minmax(197px, auto);
   grid-gap: 20px;
+}
+
+@media all and (max-width: 1023px) {
+  .our-service__row {
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: minmax(114px, auto);
+    grid-gap: 1rem;
+  }
 }
 
 .our-service__box {
@@ -531,6 +704,18 @@ p {
   transition: 0.3s;
 }
 
+@media all and (max-width: 1023px) {
+  .our-service__box {
+    padding: 1.2rem 2rem;
+  }
+}
+
+@media all and (max-width: 767px) {
+  .our-service__box {
+    padding: 0.4rem;
+  }
+}
+
 .our-service__box:hover {
   -webkit-transform: scale(1.03);
           transform: scale(1.03);
@@ -544,6 +729,19 @@ p {
   color: #095F71;
 }
 
+@media all and (max-width: 1023px) {
+  .our-service__sub-title {
+    font-size: 1rem;
+  }
+}
+
+@media all and (max-width: 767px) {
+  .our-service__sub-title {
+    font-size: 0.8rem;
+    line-height: 120%;
+  }
+}
+
 .our-service__link {
   color: #F96B30;
   font-size: 1.125rem;
@@ -555,9 +753,34 @@ p {
           align-items: center;
 }
 
+@media all and (max-width: 1023px) {
+  .our-service__link {
+    font-size: 0.8rem;
+  }
+}
+
+@media all and (max-width: 767px) {
+  .our-service__link {
+    font-size: 0.7rem;
+    line-height: 120%;
+  }
+}
+
 .geography {
   padding: 3.2rem 0 5rem;
   background: #F0F8F7;
+}
+
+@media all and (max-width: 1023px) {
+  .geography {
+    padding: 3rem 0 3rem;
+  }
+}
+
+@media all and (max-width: 767px) {
+  .geography {
+    background: url("../img/home/mobile/map_bg.png") center top/cover no-repeat;
+  }
 }
 
 .geography__title {
@@ -568,10 +791,30 @@ p {
   margin-bottom: 2.5rem;
 }
 
+@media all and (max-width: 1023px) {
+  .geography__title {
+    font-size: 2rem;
+  }
+}
+
+@media all and (max-width: 767px) {
+  .geography__title {
+    font-size: 1.2rem;
+  }
+}
+
 .geography__sub-title {
   font-size: 1.125rem;
   font-weight: 800;
   color: #F96B30;
+  margin-bottom: 0.6rem;
+}
+
+@media all and (max-width: 767px) {
+  .geography__sub-title {
+    font-size: 1rem;
+    margin-bottom: 0.4rem;
+  }
 }
 
 .geography__row {
@@ -590,6 +833,15 @@ p {
 @media all and (max-width: 1240px) {
   .geography__row {
     padding: 0;
+  }
+}
+
+@media all and (max-width: 767px) {
+  .geography__row {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
 }
 
@@ -614,6 +866,19 @@ p {
   }
 }
 
+@media all and (max-width: 1023px) {
+  .geography__box {
+    margin-right: 1rem;
+  }
+}
+
+@media all and (max-width: 1023px) {
+  .geography__box {
+    margin-right: 0;
+    margin-bottom: 2rem;
+  }
+}
+
 .geography__list-wrap {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -627,6 +892,12 @@ p {
 .geography__list {
   padding-top: 0.6rem;
   margin-right: 1.25rem;
+}
+
+@media all and (max-width: 1023px) {
+  .geography__list {
+    margin-right: 1rem;
+  }
 }
 
 .geography__link {
@@ -665,6 +936,19 @@ p {
   .geography__img {
     padding: 0;
     margin: 4.5rem 0 0;
+  }
+}
+
+@media all and (max-width: 1023px) {
+  .geography__img {
+    width: 100%;
+    margin: 2.5rem 0 0;
+  }
+}
+
+@media all and (max-width: 767px) {
+  .geography__img {
+    display: none;
   }
 }
 /*# sourceMappingURL=style.css.map */
