--- a/#src/scss/_nullstyles.scss
+++ b/#src/scss/_nullstyles.scss
@@ -75,7 +75,7 @@ $main-color: #0B327D;
 $accent-color: #EB0202;
 $accent-fresh: #F96B30;
 $accent-bg: linear-gradient(180deg, #F96B30 0%, #D51B1B 100%);
-
+$transition: 350ms all;
 
 $color1: #333;
 $color2: #ff5252;
@@ -84,6 +84,11 @@ $color4: #0A7990;
 $color5: #ffe400;
 $color-white: #ffffff;
 $transition: 350ms all;
+$black: #000;
+$white: #FFF;
+$red: #4285f4;
+$read: #4e4e4e;
+$red-dark: #4285f4;
 //<ПЕРЕМЕННЫЕ>===========================================================================================================
 $minwidth: 320px;
 $mw: 1200;
