--- a/#src/scss/test.scss
+++ b/#src/scss/test.scss
@@ -18,6 +18,67 @@ $transition: 350ms all;
     width: 100%;
     position: fixed;
     background: #0A7990;
+	z-index: 9999;
+	&__socials {
+		display: none;
+		@include nmd {
+			display: flex;
+			flex-direction: row;
+			align-items: flex-start;
+		}
+	}
+	&__social-link {
+		margin-bottom: 0.625rem;
+		transition: 0.3s; 
+		@include nsm {
+			margin-left: 0;
+			margin-bottom: 0.625rem;
+		}
+	}
+	&__social-link:hover {
+		transform: scale(1.08);
+		transition: 0.3s;
+	}
+	&__soc-facebook::before{
+		display: block;
+		content: ' ';
+		background-image: url('../img/facebook.svg');
+		background-size: 2rem 2rem;
+		height: 2rem;
+		width: 2rem;
+	}
+	&__soc-twitter::before{
+		display: block;
+		content: ' ';
+		background-image: url('../img/twitter.svg');
+		background-size: 2rem 2rem;
+		height: 2rem;
+		width: 2rem;
+	}
+	&__soc-youtube::before{
+		display: block;
+		content: ' ';
+		background-image: url('../img/youtube.svg');
+		background-size: 2rem 2rem;
+		height: 2rem;
+		width: 2rem;
+	}
+	&__soc-inst::before{
+		display: block;
+		content: ' ';
+		background-image: url('../img/instagram.svg');
+		background-size: 2rem 2rem;
+		height: 2rem;
+		width: 2rem;
+	}
+	&__soc-google-plus::before{
+		display: block;
+		content: ' ';
+		background-image: url('../img/g-plus.svg');
+		background-size: 2rem 2rem;
+		height: 2rem;
+		width: 2rem;
+	}
     .container {
         @include nsm {
             padding: 0;
@@ -90,7 +151,7 @@ $transition: 350ms all;
   }
 }
 .height-limit {
-    max-height: 23rem;
+    max-height: 28rem;
     overflow-x: hidden;
     overflow-y: scroll;
 }
@@ -115,15 +176,14 @@ ul {
       color: $colorw;
       padding: 10px 29px 10px 25px;
       display: inline-block;
-      border-left: 4px solid $pryme-alt;
+      border-left: 4px solid transparent;
       line-height: 56px;
       transition: $transition;
-      &:hover {
-        color: $color5;
-        border-left: 4px solid $accent-fresh;
-		color: $colorw;
-         box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.4);
-      }
+    //   &:hover {
+    //     border-left: 4px solid $accent-fresh;
+	// 	color: $colorw;
+    //      box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.4);
+    //   }
     }
   }
 }
@@ -143,6 +203,14 @@ ul {
 }
 .menu li {
   margin-right: 25px;
+  border-left: 4px solid transparent;
+  &:hover {
+	  border-left: 4px solid $accent-fresh;
+	  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.4);
+  }
+}
+.submenu{
+	box-shadow: 2px 2px 10px #0B327D;
 }
 
 
@@ -193,6 +261,7 @@ ul {
             border-bottom: 2px solid $color-white;
             transform: rotate(45deg);
           }
+		  
         }
       }
       .submenu {
@@ -207,25 +276,35 @@ ul {
           margin-right: 0;
           font-size: 0.75rem;
           position: relative;
+		//    background: $color1;
+		//    border-left: 4px solid $colorw;
           a {
             color: $pryme-alt;
             padding: 10px 20px;
-            background: $color1;
             line-height: 34px;
             display: block;
-            border-left: 4px solid $colorw;
             border-bottom: 0.5px solid rgba(10, 121, 144, 0.1);
             &:before {
               right: 15px;
               transform: rotate(-45deg);
             }
-            &:hover {
+          }
+		  &:hover {
               background: $pryme-alt;
+              border-left: 4px solid $accent-fresh;
+			  > a{
+				  color: $colorw;
+			  }
+            }
+        }
+	
+		.menu  a{
+			&:hover {
+             // background: $pryme-alt;
               color: $colorw;
               border-left: 4px solid $accent-fresh;
             }
-          }
-        }
+		}
         .submenu {
           position: absolute;
           left: 100%;
@@ -278,7 +357,7 @@ ul {
     li {
       margin: 0;
       border-bottom: 1px solid lighten( $color1, 5% );
-      font-size: 16px;
+      font-size: 1rem;
       a {
         display: block;
         text-align: right;
@@ -319,14 +398,14 @@ ul {
         transition: $transition;
         z-index: 1;
         li {
-          font-size: 14px;
+          font-size: 1rem;
         }
         .backmenu-row {
           position: relative;
           padding: 20px;
           padding-left: 50px;
           background: $pryme-alt;
-          font-size: 0.75rem;
+          font-size: 0.85rem;
           .back-trigger {
             padding: 0;
             position: absolute;
