--- a/#src/scss/_nullstyles.scss
+++ b/#src/scss/_nullstyles.scss
@@ -282,6 +282,12 @@ p {
 		display: block;
 	}
 }
+.hide-sm {
+	display: block;
+	@include nsm {
+		display: none;
+	}
+}
 //====================================================================================================
 
 //</ОСНОВНОЙ БЛОК>====================================================================================================
