--- a/#src/css/header.css
+++ b/#src/css/header.css
@@ -202,9 +202,14 @@ p {
   }
 }
 
-body {
-  height: 100vh;
-  background-color: wheat;
+.hide-sm {
+  display: block;
+}
+
+@media all and (max-width: 767px) {
+  .hide-sm {
+    display: none;
+  }
 }
 
 .header {
@@ -640,6 +645,18 @@ body {
   position: relative;
 }
 
+@media only screen and (max-width: 1179px) {
+  .header .menu-box {
+    padding: 14px 20px;
+  }
+}
+
+@media all and (max-width: 767px) {
+  .header .menu-box {
+    padding: 9px 20px;
+  }
+}
+
 .header .menu {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -658,7 +675,7 @@ body {
           box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.4);
 }
 
-@media all and (max-width: 1023px) {
+@media only screen and (max-width: 1179px) {
   .header .menu li:hover {
     -webkit-box-shadow: none;
             box-shadow: none;
@@ -684,6 +701,8 @@ body {
   .header .menu li .submenu {
     -webkit-transition: 350ms all;
     transition: 350ms all;
+    -webkit-box-shadow: 2px 2px 10px #0B327D;
+            box-shadow: 2px 2px 10px #0B327D;
   }
   .header .menu li:hover > .submenu {
     -webkit-transform: translateY(0);
@@ -990,11 +1009,7 @@ body {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+    margin-top: 2rem;
   }
-}
-
-.demo {
-  background: #EC3737;
-  height: 2000px;
 }
 /*# sourceMappingURL=header.css.map */
