--- a/#src/css/longreed.css
+++ b/#src/css/longreed.css
@@ -202,6 +202,16 @@ p {
   }
 }
 
+.hide-sm {
+  display: block;
+}
+
+@media all and (max-width: 767px) {
+  .hide-sm {
+    display: none;
+  }
+}
+
 .header {
   background-color: #0A7990;
   color: #ffffff;
@@ -1215,12 +1225,24 @@ p {
   margin-left: 6.25rem;
 }
 
+@media all and (max-width: 1023px) {
+  .longread .mini-container {
+    margin-left: 0rem;
+  }
+}
+
 .longread .container {
   position: relative;
 }
 
 .longread__head-wrap {
   padding-top: 10rem;
+}
+
+@media all and (max-width: 767px) {
+  .longread__head-wrap {
+    padding-top: 7rem;
+  }
 }
 
 .longread__title {
@@ -1233,12 +1255,40 @@ p {
   font-family: "Montserrat", sans-serif;
 }
 
+@media all and (max-width: 1240px) {
+  .longread__title {
+    max-width: 39.5rem;
+  }
+}
+
+@media all and (max-width: 767px) {
+  .longread__title {
+    font-size: 1.125rem;
+    line-height: 120%;
+    margin-bottom: 1rem;
+  }
+}
+
 .longread__sub-title {
   font-size: 1.75rem;
   font-weight: 800;
   font-family: "Montserrat", sans-serif;
   color: #454040;
   margin-bottom: 1.875rem;
+  margin-top: 2.5rem;
+}
+
+.longread__sub-title--alt-size {
+  font-size: 1.625rem;
+}
+
+@media all and (max-width: 767px) {
+  .longread__sub-title {
+    font-size: 1.125rem;
+    line-height: 120%;
+    margin-bottom: 1rem;
+    margin-top: 1.5rem;
+  }
 }
 
 .longread__text {
@@ -1246,11 +1296,32 @@ p {
   font-size: 1.125rem;
   font-weight: 500;
   line-height: 156%;
+  margin-bottom: 1.5rem;
 }
 
-.longread__text--1 {
+@media all and (max-width: 767px) {
+  .longread__text {
+    font-size: 0.875rem;
+    margin-bottom: 0.75rem;
+  }
+}
+
+.longread__text--first-block {
   max-width: 36.25rem;
   margin-bottom: 3.75rem;
+}
+
+@media all and (max-width: 1240px) {
+  .longread__text--first-block {
+    max-width: 28.25rem;
+  }
+}
+
+@media all and (max-width: 767px) {
+  .longread__text--first-block {
+    margin-bottom: 1rem;
+    line-height: 192%;
+  }
 }
 
 .longread__text--semi-bold {
@@ -1259,6 +1330,13 @@ p {
 
 .longread__list {
   margin-left: 1.25rem;
+  margin-bottom: 2rem;
+}
+
+@media all and (max-width: 767px) {
+  .longread__list {
+    margin-bottom: 1rem;
+  }
 }
 
 .longread__item {
@@ -1269,10 +1347,129 @@ p {
   margin-top: 1rem;
 }
 
+@media all and (max-width: 767px) {
+  .longread__item {
+    font-size: 0.875rem;
+    line-height: 192%;
+    margin-top: 0.5rem;
+  }
+}
+
 .longread__img {
   position: absolute;
   top: 6rem;
   right: 0;
   z-index: -1;
+}
+
+@media all and (max-width: 1023px) {
+  .longread__img {
+    top: 14rem;
+    width: 50%;
+  }
+}
+
+@media all and (max-width: 767px) {
+  .longread__img {
+    width: auto;
+  }
+}
+
+.longread__img-area {
+  background: -webkit-gradient(linear, left top, right top, color-stop(60%, #095F71), color-stop(40%, #fff));
+  background: linear-gradient(to right, #095F71 60%, #fff 40%);
+  padding: 1.875rem 0;
+  margin: 1.875rem 0;
+}
+
+@media all and (max-width: 767px) {
+  .longread__img-area {
+    background: none;
+    padding: 0;
+    margin: 0;
+  }
+}
+
+.longread__img-area-alt {
+  position: relative;
+  padding: 1.875rem 0;
+  margin: 1.875rem 0;
+}
+
+@media all and (max-width: 767px) {
+  .longread__img-area-alt {
+    padding: 0;
+    margin: 0 0 2rem;
+  }
+}
+
+.longread__img-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.longread__img-wrap--top {
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+@media all and (max-width: 1240px) {
+  .longread__images--big {
+    width: 57%;
+  }
+}
+
+@media all and (max-width: 767px) {
+  .longread__images--big {
+    width: 100%;
+  }
+}
+
+@media all and (max-width: 1240px) {
+  .longread__images--small {
+    width: 40%;
+  }
+}
+
+@media all and (max-width: 767px) {
+  .longread__images--small {
+    display: none;
+  }
+}
+
+@media all and (max-width: 1240px) {
+  .longread__images {
+    width: 48.5%;
+  }
+}
+
+@media all and (max-width: 767px) {
+  .longread__images {
+    width: 100%;
+  }
+}
+
+.longread__decor {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  background: #095F71;
+  height: 284px;
+  width: 60%;
+  z-index: -1;
+}
+
+@media all and (max-width: 767px) {
+  .longread__decor {
+    display: none;
+  }
 }
 /*# sourceMappingURL=longreed.css.map */
