--- a/css/case.css
+++ b/css/case.css
@@ -1229,6 +1229,13 @@ p {
   min-height: 320px;
 }
 
+@media all and (max-width: 767px) {
+  .experience__top {
+    background: url("../img/case/mob_bg.jpg") center top/cover no-repeat;
+    min-height: 9.75rem;
+  }
+}
+
 .experience__title {
   padding: 5rem 0;
   font-size: 2rem;
@@ -1240,10 +1247,29 @@ p {
   text-shadow: 0px 2px 3px rgba(0, 0, 0, 0.8);
 }
 
+@media all and (max-width: 767px) {
+  .experience__title {
+    font-size: 1.1rem;
+    max-width: 19rem;
+    padding: 1rem 0;
+  }
+}
+
 .experience__bottom {
-  background: #095F71;
+  background: #0A7990;
   padding: 8rem 0;
-  position: relative;
+}
+
+@media all and (max-width: 1240px) {
+  .experience__bottom {
+    padding: 8rem 0 3rem;
+  }
+}
+
+@media all and (max-width: 767px) {
+  .experience__bottom {
+    padding: 4rem 0 0rem;
+  }
 }
 
 .experience__sub-title {
@@ -1252,12 +1278,498 @@ p {
   font-weight: bold;
   font-size: 1.75rem;
   color: #FFFFFF;
+  margin-bottom: 1.2rem;
+}
+
+@media all and (max-width: 767px) {
+  .experience__sub-title {
+    font-size: 1.1rem;
+    margin-bottom: 0.5rem;
+  }
 }
 
 .experience__text {
-  font-weight: 500;
+  font-weight: 400;
   font-size: 1.125rem;
   line-height: 156%;
   color: #F0F8F7;
+}
+
+@media all and (max-width: 767px) {
+  .experience__text {
+    font-size: 0.75rem;
+    line-height: 185%;
+  }
+}
+
+.experience__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+@media all and (max-width: 1023px) {
+  .experience__row {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+.experience__text-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  max-width: 36.25rem;
+  position: relative;
+}
+
+@media all and (max-width: 1240px) {
+  .experience__text-wrap {
+    max-width: 48%;
+  }
+}
+
+@media all and (max-width: 1023px) {
+  .experience__text-wrap {
+    max-width: 100%;
+    margin-bottom: 1rem;
+  }
+}
+
+.experience__delivery {
+  position: absolute;
+  left: 0;
+  top: -13.5rem;
+  width: 100%;
+  background: #F0F8F7;
+  padding: 3.2rem 6rem;
+  -webkit-box-shadow: 3px 3px 30px rgba(0, 0, 0, 0.25);
+          box-shadow: 3px 3px 30px rgba(0, 0, 0, 0.25);
+}
+
+@media all and (max-width: 1240px) {
+  .experience__delivery {
+    width: 125%;
+  }
+}
+
+@media all and (max-width: 1023px) {
+  .experience__delivery {
+    width: 78%;
+  }
+}
+
+@media all and (max-width: 767px) {
+  .experience__delivery {
+    width: 13.75rem;
+    left: auto;
+    right: 0;
+    top: -5.5rem;
+    padding: 0.75rem 1rem;
+  }
+}
+
+.experience__cap {
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
+  font-size: 1.75rem;
+  line-height: 120%;
+  color: #095F71;
+}
+
+@media all and (max-width: 767px) {
+  .experience__cap {
+    font-size: 0.8125rem;
+  }
+}
+
+.experience__img {
+  -webkit-box-shadow: 3px 3px 30px rgba(0, 0, 0, 0.25);
+          box-shadow: 3px 3px 30px rgba(0, 0, 0, 0.25);
+}
+
+@media all and (max-width: 1240px) {
+  .experience__img {
+    width: 50%;
+  }
+}
+
+@media all and (max-width: 1023px) {
+  .experience__img {
+    width: 100%;
+  }
+}
+
+@media all and (max-width: 767px) {
+  .experience__img {
+    margin-bottom: -1.5rem;
+  }
+}
+
+.solution {
+  background: #F0F8F7;
+  padding: 5.5rem 0;
+}
+
+@media all and (max-width: 767px) {
+  .solution {
+    padding: 3.5rem 0;
+  }
+}
+
+.solution__main-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+@media all and (max-width: 1023px) {
+  .solution__main-wrap {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+}
+
+.solution__img-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+@media all and (max-width: 1023px) {
+  .solution__img-wrap {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    width: 100%;
+  }
+}
+
+.solution__text-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  max-width: 36.25rem;
+}
+
+@media all and (max-width: 1240px) {
+  .solution__text-wrap {
+    max-width: 25.25rem;
+  }
+}
+
+@media all and (max-width: 1023px) {
+  .solution__text-wrap {
+    max-width: 36.25rem;
+  }
+}
+
+.solution__title {
+  font-family: "Montserrat", sans-serif;
+  font-size: 1.75rem;
+  font-weight: bold;
+  color: #095F71;
+  margin-bottom: 1.2rem;
+}
+
+@media all and (max-width: 767px) {
+  .solution__title {
+    font-size: 1.1rem;
+    margin-bottom: 0.5rem;
+  }
+}
+
+.solution__text {
+  font-weight: 400;
+  font-size: 1.125rem;
+  line-height: 156%;
+  color: #095F71;
+  margin-bottom: 9rem;
+}
+
+@media all and (max-width: 1023px) {
+  .solution__text {
+    margin-bottom: 3rem;
+  }
+}
+
+@media all and (max-width: 767px) {
+  .solution__text {
+    font-size: 0.75rem;
+    line-height: 185%;
+  }
+}
+
+.solution__list-title {
+  font-weight: 600;
+  font-size: 1.125rem;
+  line-height: 156%;
+  color: #095F71;
+  margin-bottom: 0.5rem;
+}
+
+@media all and (max-width: 767px) {
+  .solution__list-title {
+    font-size: 0.75rem;
+    line-height: 185%;
+  }
+}
+
+.solution__list {
+  margin-left: 1.25rem;
+}
+
+.solution__item {
+  font-weight: 500;
+  font-size: 1.125rem;
+  line-height: 156%;
+  color: #095F71;
+  margin-bottom: 0.5rem;
+  list-style-type: '\2014';
+  padding-left: 0.4rem;
+}
+
+@media all and (max-width: 767px) {
+  .solution__item {
+    font-size: 0.75rem;
+    line-height: 185%;
+  }
+}
+
+.solution__img {
+  margin-bottom: 1rem;
+}
+
+.solution__img:last-child {
+  margin-bottom: 0;
+  margin-right: 0;
+}
+
+@media all and (max-width: 1023px) {
+  .solution__img {
+    max-height: 235px;
+    margin-bottom: 0;
+    margin-right: 1rem;
+    margin-top: 2rem;
+  }
+}
+
+@media all and (max-width: 767px) {
+  .solution__img {
+    width: 100%;
+  }
+}
+
+.crm {
+  background: #0A7990;
+  padding: 3.2rem 0;
+}
+
+.crm__wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+@media all and (max-width: 1023px) {
+  .crm__wrap {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+.crm__text {
+  font-weight: 400;
+  font-size: 1.125rem;
+  line-height: 156%;
+  color: #F0F8F7;
+  max-width: 37rem;
+}
+
+@media all and (max-width: 1240px) {
+  .crm__text {
+    max-width: 21rem;
+  }
+}
+
+@media all and (max-width: 1023px) {
+  .crm__text {
+    max-width: 36rem;
+    margin-bottom: 2rem;
+  }
+}
+
+@media all and (max-width: 767px) {
+  .crm__text {
+    font-size: 0.75rem;
+    line-height: 185%;
+  }
+}
+
+.crm__img-wrap {
+  padding: 2rem 1.75rem;
+  background: #fff;
+}
+
+@media all and (max-width: 767px) {
+  .crm__img {
+    width: 100%;
+  }
+}
+
+.result {
+  background: #F0F8F7;
+  padding: 3.2rem 0;
+}
+
+@media all and (max-width: 767px) {
+  .result {
+    padding: 1.5rem 0 3rem;
+  }
+}
+
+.result__main-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+@media all and (max-width: 767px) {
+  .result__main-wrap {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+}
+
+.result__text-wrap {
+  max-width: 36rem;
+}
+
+@media all and (max-width: 1240px) {
+  .result__text-wrap {
+    max-width: 25rem;
+  }
+}
+
+@media all and (max-width: 1023px) {
+  .result__text-wrap {
+    max-width: 21rem;
+  }
+}
+
+.result__title {
+  font-family: "Montserrat", sans-serif;
+  font-size: 1.75rem;
+  font-weight: bold;
+  color: #095F71;
+  margin-bottom: 1.2rem;
+}
+
+@media all and (max-width: 767px) {
+  .result__title {
+    font-size: 1.1rem;
+    margin-bottom: 0.5rem;
+  }
+}
+
+.result__text {
+  font-weight: 400;
+  font-size: 1.125rem;
+  line-height: 156%;
+  color: #095F71;
+}
+
+@media all and (max-width: 767px) {
+  .result__text {
+    font-size: 0.75rem;
+    line-height: 185%;
+    margin-bottom: 1rem;
+  }
+}
+
+@media all and (max-width: 1023px) {
+  .result__img {
+    width: 50%;
+  }
+}
+
+@media all and (max-width: 767px) {
+  .result__img {
+    width: 100%;
+  }
+}
+
+.result__quote {
+  background: -webkit-gradient(linear, left top, right top, color-stop(75%, #b5d7de), color-stop(25%, #F0F8F7));
+  background: linear-gradient(to right, #b5d7de 75%, #F0F8F7 25%);
+}
+
+.result .contact-slider {
+  margin: 3.2rem 0 0;
 }
 /*# sourceMappingURL=case.css.map */
