--- a/css/country.css
+++ b/css/country.css
@@ -202,6 +202,16 @@ p {
   }
 }
 
+.hide-sm {
+  display: block;
+}
+
+@media all and (max-width: 767px) {
+  .hide-sm {
+    display: none;
+  }
+}
+
 .header {
   background-color: #0A7990;
   color: #ffffff;
